--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,67 @@
+/* Global reset */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body {
+  background-color: #57606f;
+}
+
+.main-nav {
+  display: flex;
+  padding: 32px 80px;
+}
+
+.left-section {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+}
+
+.primary-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.right-section {
+  width: 371px;
+  height: 30px;
+
+  display: flex;
+  gap: 24px;
+}
+
+.nav-links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0px;
+}
+
+li {
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+}
+
+.right-section {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+
+.info-list {
+  display: flex;
+}
+
+.secondary-group {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
