--- a/css/spriteSheet-v2.css
+++ b/css/spriteSheet-v2.css
@@ -1,5 +1,5 @@
 .icon {
-  background: url(../img/icons.svg) no-repeat;
+  background: url(../img/icon.svg) no-repeat;
   width: 16px;
   height: 16px;
   display: inline-block;
