--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body {
 
 .main-nav {
   display: flex;
+  justify-content: space-between;
   padding: 32px 80px;
 }
 
@@ -25,35 +26,36 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 8px;
 }
 
-.right-section {
-  width: 371px;
-  height: 30px;
-
-  display: flex;
-  gap: 24px;
-}
-
-.nav-links {
+.primary-links > .nav-links {
+  border-right: 1px solid #3a2f2f;
+  padding: 8px 12px;
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 0px;
+  gap: 4px;
 }
 
 li {
   list-style-type: none;
 }
 
-a {
+.nav-links a {
+  color: var(--surface-dim);
   text-decoration: none;
+}
+
+.nav-links span {
+  transform: translateY(36%);
 }
 
 .right-section {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   flex-direction: column;
+  gap: 24px;
 }
 
 .info-list {
