--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,8 @@ body {
 
 .main-nav {
   display: flex;
+  max-height: 164px;
+
   justify-content: space-between;
   padding: 32px 80px;
 }
@@ -23,19 +25,13 @@ body {
 }
 
 .primary-links {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 8px;
+  display: inline;
 }
 
 .primary-links > .nav-links {
   border-right: 1px solid #3a2f2f;
-  padding: 8px 12px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 4px;
+  padding: 8px 16px;
+  display: inline-block;
 }
 
 li {
@@ -45,10 +41,11 @@ li {
 .nav-links a {
   color: var(--surface-dim);
   text-decoration: none;
+  padding-right: 4px;
 }
 
 .nav-links span {
-  transform: translateY(36%);
+  vertical-align: bottom;
 }
 
 .right-section {
