--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,10 @@ li {
   list-style-type: none;
 }
 
+a {
+  color: var(--surface-dim);
+  text-decoration: none;
+}
 .main-nav {
   background: linear-gradient(
     180deg,
@@ -51,6 +55,7 @@ li {
   padding-right: var(--small-extra);
 }
 
+.info-list span,
 .nav-links span {
   vertical-align: bottom;
 }
@@ -75,6 +80,10 @@ li {
 .info-list {
   position: absolute;
   top: 16px;
+}
+
+.info-list a {
+  font-size: var(--text---small-extra--bold);
 }
 
 .secondary-group li {
