--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,7 @@ a {
 }
 
 .search-form {
+  height: 30px;
   position: relative;
   background-color: var(--red-shade);
   padding: var(--small) var(--medium);
@@ -106,14 +107,18 @@ a {
 
 .search-form svg {
   position: absolute;
-  top: 11px;
-  right: 11px;
+  top: 7px;
+  right: 7px;
 }
 
 .search-form input {
   width: 92px;
   background-color: var(--red-shade);
+  color: var(--surface);
+  font-size: var(--text---small-extra);
+  vertical-align: top;
   border: none;
+  outline: none;
 }
 
 .search-form input::placeholder {
