--- a/css/style.css
+++ b/css/style.css
@@ -1,127 +1,87 @@
-/* Global reset */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body {
-  background-color: #57606f;
-  font-family: "Inter", Arial, Helvetica, sans-serif;
-}
-
-li {
-  list-style-type: none;
-}
-
-a {
-  color: var(--surface-dim);
-  text-decoration: none;
-}
-.main-nav {
-  background: linear-gradient(
-    180deg,
-    var(--red) 0%,
-    #6a0000 40%,
-    var(--red-dim) 100%
-  );
-
+.slider {
   display: flex;
-  max-height: 164px;
-  justify-content: space-between;
-  padding: var(--large-ultimate) var(--side-gutter);
+  margin: 50px auto;
+  width: 1000px;
+  height: 500px;
+  position: relative;
+  overflow: hidden;
 }
 
-.left-section {
+.slide {
+  position: absolute;
+}
+
+.slide > img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.slider__btn {
+  position: absolute;
+  background: rgba(255, 255, 255, 0.7);
+  color: #333;
+  font-size: 1.875rem;
+  border: none;
+  height: 1.25rem;
+  width: 1.25rem;
+  border-radius: 50%;
+  cursor: pointer;
+  top: 50%;
+  transform: translateY(50%);
+
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: var(--small);
 }
 
-.primary-links {
-  display: inline;
-}
-
-.primary-links > .nav-links {
-  border-right: 1px solid var(--surface-shade);
-  padding: var(--small) var(--large);
-  display: inline-block;
-}
-
-.nav-links a {
-  color: var(--surface-dim);
-  text-decoration: none;
-  padding-right: var(--small-extra);
-}
-
-.info-list span,
-.nav-links span {
-  vertical-align: bottom;
-}
-
-.right-section {
-  /* position: relative; */
+.slider__btn > img {
+  width: 15px;
+  height: 15px;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   align-items: center;
-  /* gap: var(--large-extra); */
 }
 
-.right-section li {
-  color: var(--surface);
-  display: inline;
+.slider__btn--left {
+  left: 3%;
+  transform: translateX(-50%);
 }
 
-.right-section > li:first-child {
-  padding-right: var(--small);
+.slider__btn--right {
+  right: 3%;
+  transform: translateX(50%);
 }
 
-.info-list {
+.dots {
+  display: flex;
+  justify-content: center;
   position: absolute;
-  top: 16px;
+  bottom: 10px;
+  width: 100%;
+  /* background-color: gold; */
 }
 
-.info-list a {
-  font-size: var(--text---small-extra--bold);
+.dots__dot {
+  height: 12px;
+  width: 12px;
+  margin: 0 5px;
+  background-color: grey;
+  border-radius: 50%;
+  cursor: pointer;
 }
 
-.secondary-group li {
-  background-color: var(--red-dim);
-  padding: var(--small) var(--medium);
+.dots__dot:last-child {
+  margin-right: 0;
 }
 
-.secondary-group li:first-child {
-  border-top-left-radius: var(--rounded-normal);
-  border-bottom-left-radius: var(--rounded-normal);
-}
-
-.search-form {
-  height: 30px;
-  position: relative;
-  background-color: var(--red-shade);
-  padding: var(--small) var(--medium);
-  border-top-right-radius: var(--rounded-normal);
-  border-bottom-right-radius: var(--rounded-normal);
-}
-
-.search-form svg {
-  position: absolute;
-  top: 7px;
-  right: 7px;
-}
-
-.search-form input {
-  width: 92px;
-  background-color: var(--red-shade);
-  color: var(--surface);
-  font-size: var(--text---small-extra);
-  vertical-align: top;
-  border: none;
-  outline: none;
-}
-
-.search-form input::placeholder {
-  color: var(--surface);
-  font-size: var(--text---small-extra);
+.dots__dot--active {
+  background-color: blue;
+  /* opacity: 1; */
 }
