--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,8 @@
 .slider {
   display: flex;
   margin: 50px auto;
-  width: 1000px;
-  height: 500px;
+  width: 1280px;
+  height: 350px;
   position: relative;
   overflow: hidden;
 }
@@ -29,8 +29,8 @@
   color: #333;
   font-size: 1.875rem;
   border: none;
-  height: 1.25rem;
-  width: 1.25rem;
+  height: 2.25rem;
+  width: 2.25rem;
   border-radius: 50%;
   cursor: pointer;
   top: 50%;
@@ -42,8 +42,8 @@
 }
 
 .slider__btn > img {
-  width: 15px;
-  height: 15px;
+  width: 30px;
+  height: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -61,18 +61,20 @@
 
 .dots {
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
   position: absolute;
-  bottom: 10px;
+  top: 4px;
+  right: 4px;
   width: 100%;
   /* background-color: gold; */
 }
 
 .dots__dot {
-  height: 12px;
-  width: 12px;
+  height: 14px;
+  width: 14px;
   margin: 0 5px;
-  background-color: grey;
+  background: none;
+  border: 1px solid var(--surface);
   border-radius: 50%;
   cursor: pointer;
 }
@@ -82,6 +84,17 @@
 }
 
 .dots__dot--active {
-  background-color: blue;
-  /* opacity: 1; */
+  background: var(--surface);
+  opacity: 1;
+}
+
+.info__icon {
+  position: absolute;
+  bottom: var(--small-extra);
+  right: var(--small-extra);
+  cursor: pointer;
+}
+
+.info__icon:hover {
+  background-position: -144px 0;
 }
