--- a/css/style.css
+++ b/css/style.css
@@ -97,6 +97,7 @@ a {
 }
 
 .search-form {
+  width: 128px;
   height: 30px;
   position: relative;
   background-color: var(--red-shade);
@@ -105,23 +106,46 @@ a {
   border-bottom-right-radius: var(--rounded-normal);
 }
 
+.search-form:focus-within {
+  background-color: var(--surface-dim);
+}
+
 .search-form svg {
   position: absolute;
   top: 7px;
-  right: 7px;
+  right: 8px;
+  stroke: var(--surface);
+  stroke-width: 3;
+}
+
+.search-form:focus-within svg {
+  stroke: var(--surface-shade);
+  fill: var(--surface-shade);
 }
 
 .search-form input {
-  width: 92px;
+  width: 88px;
+  height: 14px;
+
   background-color: var(--red-shade);
   color: var(--surface);
   font-size: var(--text---small-extra);
+
   vertical-align: top;
   border: none;
   outline: none;
 }
 
+.search-form:focus-within input {
+  background-color: var(--surface-dim);
+  color: var(--surface-shade);
+}
+
 .search-form input::placeholder {
   color: var(--surface);
   font-size: var(--text---small-extra);
+}
+
+.search-form:focus-within input::placeholder {
+  color: var(--surface-shade);
 }
