--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,10 @@ svg {
   background-color: var(--red-shade);
 }
 
+.nav-links {
+  position: relative;
+}
+
 .nav-links a {
   color: var(--surface-dim);
   text-decoration: none;
@@ -102,23 +106,22 @@ svg {
   font-size: var(--text---small-extra--bold);
 }
 
-.secondary-group li {
+.secondary-group > li {
   height: 30px;
   display: inline-block;
   background-color: var(--red-dim);
   padding: var(--small) var(--medium);
 }
 
-.secondary-group li:first-child {
+.secondary-group > li:first-child {
   border-top-left-radius: var(--rounded-normal);
-  border-bottom-left-radius: var(--rounded-normal);
 }
 
 .search-form {
   width: 128px;
   height: 30px;
   position: relative;
-  background-color: var(--red-shade);
+  background-color: var(--red);
   padding: var(--small) var(--medium);
   border-top-right-radius: var(--rounded-normal);
   border-bottom-right-radius: var(--rounded-normal);
@@ -145,7 +148,7 @@ svg {
   width: 88px;
   height: 14px;
 
-  background-color: var(--red-shade);
+  background-color: var(--red);
   color: var(--surface);
   font-size: var(--text---small-extra);
 
@@ -253,4 +256,88 @@ svg {
 
 .swap-on-hover:hover use:first-child {
   display: block;
+}
+
+/* LEFT SECTION SUB-MENU */
+.sub-menu {
+  min-width: 180px;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: var(--surface);
+  border-bottom-left-radius: var(--rounded-normal);
+  border-bottom-right-radius: var(--rounded-normal);
+  display: none;
+  z-index: 1;
+}
+
+.nav-links:hover .sub-menu {
+  display: block;
+}
+
+.sub-menu:hover li {
+  cursor: pointer;
+}
+
+.sub-menu a {
+  color: var(--red-dim);
+}
+
+.sub-menu li {
+  padding: var(--small) var(--medium);
+}
+
+.sub-menu li:hover {
+  background-color: var(--red-shade-light);
+  color: var(--surface);
+}
+
+.sub-menu li:hover:last-child {
+  border-bottom-left-radius: var(--rounded-normal);
+  border-bottom-right-radius: var(--rounded-normal);
+}
+
+.sub-menu li:hover a {
+  color: var(--surface);
+}
+
+/* RIGHT SECTION SUB-MENU */
+.sub-menu__right {
+  min-width: 115px;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  background-color: var(--surface);
+  border-bottom-left-radius: var(--rounded-normal);
+  border-bottom-right-radius: var(--rounded-normal);
+  display: none;
+  z-index: 1;
+}
+
+.secondary-group li:hover .sub-menu__right {
+  display: block;
+}
+
+.sub-menu__right li:hover {
+  background-color: var(--red-shade-light);
+  color: var(--surface);
+}
+
+.sub-menu__right li:hover:last-child {
+  border-bottom-left-radius: var(--rounded-normal);
+  border-bottom-right-radius: var(--rounded-normal);
+}
+
+.sub-menu__right li:hover a {
+  color: var(--surface);
+}
+
+.sub-menu__right a {
+  color: var(--red-dim);
+}
+
+.sub-menu__right li {
+  display: block;
+  padding: var(--small-extra) var(--medium);
+  min-width: 115px;
 }
