--- a/css/variables.css
+++ b/css/variables.css
@@ -7,6 +7,7 @@
   --neutral: #141414;
   --red: #990000;
   --red-shade: #ff6666;
+  --red-shade-light: #fab5b9;
   --red-dim: #661414;
   --red-muted: #7a1f1f;
 
