--- a/css/classes.css
+++ b/css/classes.css
@@ -1,27 +1,46 @@
 .classes-section {
-    background: var(--surface-dim);
-    padding: var(--large-ultimate) var(--side-gutter);
+  background: var(--surface-dim);
+  padding: var(--large-ultimate) var(--side-gutter);
 }
 
 .classes-section svg {
-    fill: var(--neutral);
+  fill: var(--neutral);
 }
 
 .section__title {
-    display: inline-block;
-    color: var(--neutral);
-    padding: var(--small-extra) 0;
+  display: inline-block;
+  color: var(--neutral);
+  padding: var(--small-extra) 0;
 }
 
 .section__title-wrapper {
-    margin-bottom: var(--large-extra);
+  margin-bottom: var(--large-extra);
 }
 
 .classes-wrapper {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);   
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.class-cards {
+  position: relative;
+}
+
+.class-cards img {
+  box-shadow: var(--drop-shadow);
 }
 
 .class-cards p {
-    display: inline-block;
+  display: inline-block;
+}
+
+.classes-info-wrapper {
+  width: 350px;
+  background: var(--surface-gradient-horizontal);
+  padding-top: var(--small-extra);
+  padding-right: var(--small-extra);
+  padding-bottom: var(--small-extra);
+  padding-left: var(--medium);
+  position: absolute;
+  top: 225px;
 }
