--- a/css/classes.css
+++ b/css/classes.css
@@ -17,7 +17,7 @@
   margin-bottom: var(--large-extra);
 }
 
-.classes-wrapper {
+.classes-cards-wrapper {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
 }
@@ -42,5 +42,5 @@
   padding-bottom: var(--small-extra);
   padding-left: var(--medium);
   position: absolute;
-  top: 225px;
+  bottom: 0;
 }
