--- a/css/global.css
+++ b/css/global.css
@@ -26,3 +26,15 @@ svg {
 .fix-white-space {
   font-size: 0;
 }
+
+.separator-gradient {
+  border-image-slice: 1;
+  border-image-source: linear-gradient(
+    90deg,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(43, 43, 43, 0.6) 15%,
+    #666666 50%,
+    rgba(43, 43, 43, 0.6) 84.5%,
+    rgba(0, 0, 0, 0) 100%
+  );
+}
