--- a/css/components/gallery.css
+++ b/css/components/gallery.css
@@ -1,6 +1,10 @@
 .gallery-section {
-  padding: var(--large-ultimate) var(--side-gutter);
   background: var(--surface-mute);
+}
+
+.gallery-section-wrapper {
+  max-width: 550px;
+  margin: 0 auto;
 }
 
 .section__images {
@@ -9,7 +13,6 @@
 }
 
 .image-wrapper {
-  /* width: 1120px; */
   display: flex;
   gap: var(--large-ultimate);
   transition: transform 2500ms ease-in-out;
@@ -41,3 +44,16 @@
   transform: translate(0%, -50%);
   transition: transform 2000ms ease-in;
 }
+
+/* Responsive */
+
+/* @media (min-width: 475px) { } */
+/* @media (min-width: 640px) { } */
+@media (min-width: 768px) {
+  .gallery-section-wrapper {
+    max-width: 1200px;
+  }
+}
+/* @media (min-width: 1024px) { } */
+/* @media (min-width: 1280px) { } */
+/* @media (min-width: 1536px) { } */
