--- a/css/components/hero.css
+++ b/css/components/hero.css
@@ -1,9 +1,11 @@
 /* Carousel */
 .slider {
+  height: 250px;
   display: flex;
-  height: 350px;
   position: relative;
   overflow: hidden;
+  justify-content: center;
+  align-items: center;
 }
 
 .slide {
@@ -23,12 +25,12 @@
 }
 
 .slider__btn--left {
-  left: 3%;
+  left: 7%;
   transform: translateX(-50%);
 }
 
 .slider__btn--right {
-  right: 3%;
+  right: 7%;
   transform: translateX(50%);
 }
 
@@ -82,10 +84,7 @@
   z-index: -1;
 }
 
-.swap-on-hover use:first-child {
-  display: none;
-}
-
+.swap-on-hover use:first-child,
 .swap-on-hover:hover use:last-child {
   display: none;
 }
@@ -104,3 +103,30 @@
   position: relative;
   overflow: hidden;
 }
+
+/* Responsive */
+
+/* @media (min-width: 475px) { } */
+/* @media (min-width: 640px) { } */
+
+@media (min-width: 768px) {
+  .slider {
+    height: 350px;
+  }
+
+  .slider__btn--left {
+    left: 3%;
+  }
+
+  .slider__btn--right {
+    right: 3%;
+  }
+}
+
+/* @media (min-width: 1024px) { } */
+@media (min-width: 1280px) {
+  .slider {
+    height: 550px;
+  }
+}
+/* @media (min-width: 1536px) { } */
