--- a/css/utils/variables.css
+++ b/css/utils/variables.css
@@ -58,16 +58,16 @@
   --hero-inner-shadow: inset 0px 40px 40px rgba(0, 0, 0, 0.25),
     inset 0px -40px 40px rgba(0, 0, 0, 0.25);
 
-  /* Padding size */
-  --small-extra: 4px;
-  --small: 8px;
-  --medium: 12px;
-  --large: 16px;
-  --large-extra: 24px;
-  --large-ultimate: 32px;
-  --huge: 48px;
-  --huge-large: 64px;
-  --side-gutter: 80px;
+  /* Sizes */
+  --small-extra: 0.25rem;
+  --small: 0.5rem;
+  --medium: 0.75rem;
+  --large: 1rem;
+  --large-extra: 1.5rem;
+  --large-ultimate: 2rem;
+  --huge: 3rem;
+  --huge-large: 4rem;
+  --side-gutter: 5rem;
 
   /* Border radius */
   --rounded-normal: 4px;
