--- a/css/gallery.css
+++ b/css/gallery.css
@@ -4,33 +4,40 @@
 }
 
 .section__images {
-  /* width: 1120px; */
+  position: relative;
   overflow: hidden;
+}
+
+.image-wrapper {
+  /* width: 1120px; */
   display: flex;
   gap: var(--large-ultimate);
-  position: relative;
+  transition: transform 2500ms ease-in-out;
 }
 
 .gallery__btn {
   background-color: var(--surface-shade);
   border: none;
   border-radius: 50%;
-  height: 2.25rem;
-  width: 1.875rem;
+  height: 36px;
+  width: 30px;
   position: absolute;
   top: 50%;
 
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
 }
 
 .gallery__btn--left {
   left: 0;
-  transform: translateY(-50%);
+  transform: translate(-100%, -50%);
+  transition: transform 2000ms ease-in;
 }
 
 .gallery__btn--right {
   right: 0;
-  transform: rotate(180deg) translateY(50%);
+  transform: translate(0%, -50%);
+  transition: transform 2000ms ease-in;
 }
