--- a/css/global.css
+++ b/css/global.css
@@ -38,3 +38,14 @@ svg {
     rgba(0, 0, 0, 0) 100%
   );
 }
+.separator-gradient-vertical {
+  border-image-slice: 1;
+  border-image-source: linear-gradient(
+    360deg,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(43, 43, 43, 0.6) 15%,
+    #666666 50%,
+    rgba(43, 43, 43, 0.6) 84.5%,
+    rgba(0, 0, 0, 0) 100%
+  );
+}
