--- a/admission/css/style.css
+++ b/admission/css/style.css
@@ -95,7 +95,7 @@
   content: none;
 }
 .faq summary::before {
-  content: url(../../svg/icon-plus.svg);
+  content: url(../../assets/svg/icon-plus.svg);
   height: var(--medium);
   width: var(--medium);
   position: absolute;
@@ -103,7 +103,7 @@
   top: var(--small);
 }
 .faq summary::after {
-  content: url(../../svg/icon-plus.svg);
+  content: url(../../assets/svg/icon-plus.svg);
   height: var(--medium);
   width: var(--medium);
   position: absolute;
@@ -114,7 +114,7 @@
   background: var(--surface-dim);
 }
 .faq details[open] summary::before {
-  content: url(../../svg/icon-cross.svg);
+  content: url(../../assets/svg/icon-cross.svg);
   height: var(--medium);
   width: var(--medium);
   position: absolute;
@@ -122,7 +122,7 @@
   top: var(--small);
 }
 .faq details[open] summary::after {
-  content: url(../../svg/icon-cross.svg);
+  content: url(../../assets/svg/icon-cross.svg);
   height: var(--medium);
   width: var(--medium);
   position: absolute;
